--- a/Meilenstein01/Pflichtenheft.tex
+++ b/Meilenstein01/Pflichtenheft.tex
@@ -5,6 +5,7 @@
 \usepackage{listings}
 \usepackage{todonotes}
 \usepackage{graphicx}
+\usepackage{siunitx}
 
 \setboolean{showsolutions}{false}
 
@@ -135,14 +136,5 @@ ABHÄNGIGKEITEN: & F2\\
 
 \subsection{Nichtfunktionale Anforderungen}
 \input{chapter/nfa.tex}
-
-\begin{tabularx}{16cm}{l|X}
-\textbf{ID} & \textbf{QA1} \\
-\hline
-TITEL: & Robustheit \\
-\hline
-BESCHREIBUNG: & Die Anwendung darf nicht abstürzen. Bei 100 Spielen darf maximal 1 Spiel
-aufgrund eines Fehlers abgebrochen werden. \\
-\end{tabularx}
 
 \end{document}
