--- a/Meilenstein01/Pflichtenheft.tex
+++ b/Meilenstein01/Pflichtenheft.tex
@@ -92,7 +92,6 @@ Beschreibung des Systems und seiner Funktionen.
 
 
 \subsection{Akteure}
-\todo[inline]{Akteure Caro}
 \input{chapter/Akteure.tex}
 
 
@@ -103,27 +102,8 @@ spezifizieren.
 
 \subsubsection{Sever}
 
-\todo[inline]{hier noch ein beispiel, dass man sich copy pasten kann}
+\todo[inline]{Beispiel, dass man sich copy pasten kann: siehe chapter (genFA.tex wie im Issue beschrieben)}
 \input{chapter/serverFA.tex}
-
-\begin{tabularx}{16cm}{l|X}
-\textbf{ID} & \textbf{FA1} \\
-\hline
-TITEL: & Hauptmenü \\
-\hline
-BESCHREIBUNG: & Nach dem Anwendungsstart wird dem Benutzer das Hauptmenü angezeigt. Der Benutzer kann folgende Aktionen im Hauptmenü ausführen: 
-\begin{itemize}
-\item Die Verbindung zu einem Server herstellen
-\item Die Verbindung zu einem Server trennen
-\item Zur Lobby Übersicht wechseln, insofern eine Serververbindung besteht.
-\item Die Anwendung beenden
-\end{itemize}
-\\
-\hline
-BEGRÜNDUNG: & Um eine Spielpartie zu erstellen oder einer solchen beizutreten, muss eine Verbindung zu einem Server aufgebaut werden. Dies muss initial vom Benutzer durchgeführt werden. Hierfür soll das Hauptmenü verwendet werden.\\
-\hline
-ABHÄNGIGKEITEN: & F2\\
-\end{tabularx}
 
 \subsubsection{Client}
 \input{chapter/clientFA.tex}
