Kontextanalyse initial commit

--- a/Meilenstein01/Pflichtenheft.tex
+++ b/Meilenstein01/Pflichtenheft.tex
@@ -45,15 +45,7 @@
 \listoftodos
 
 \section{Kontextanalyse}
-\todo[inline]{Marco}
-Der Zweck dieses Dokuments ist es, eine detaillierte Beschreibung der Anforderungen, sowie der
-Benutzerschnittstelle für die Anwendung \textbf{No time to spy} bereitzustellen. Es wird abgegrenzt, welche
-Anforderungen erfüllt werden müssen, damit die entwickelte Anwendung vom Kunden akzeptiert
-wird.
-
-\subsection{Anwendungsbereich}
-
-Das Spiel \textbf{No time to spy} ist eine C++-Anwendung, die es dem Benutzer ermöglicht, ein 2D-Spiel zu spielen.
+\input{chapter/kontext.tex}
 
 
 \section{Fachwissen}
