--- a/Meilenstein01/Pflichtenheft.tex
+++ b/Meilenstein01/Pflichtenheft.tex
@@ -108,7 +108,7 @@ Beschreibung des Systems und seiner Funktionen.
 \subsection{Akteure}
 \input{chapter/Akteure.tex}
 
-
+\clearpage
 \subsection{Funktionale Anforderungen}
 
 Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des Softwaresystems
@@ -118,15 +118,21 @@ spezifizieren.
 
 \input{chapter/serverFA.tex}
 
+\clearpage
 \subsubsection{Client}
 \input{chapter/clientFA.tex}
+
+\clearpage
 \subsubsection{KI-Client}
 \input{chapter/kiFA.tex}
 \subsubsection{Editor}
 \input{chapter/editorFA.tex}
+
+\clearpage
 \subsubsection{Allgemeine funktionale Anforderungen}
 \input{chapter/genFA.tex}
 
+\clearpage
 \subsection{Nichtfunktionale Anforderungen}
 \input{chapter/nfa.tex}
 
