--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -90,15 +90,15 @@
 
 \clearpage
 \section{Kontextanalyse}
-\input{chapter/kontext.tex}
+\input{Meilenstein01/chapter/kontext.tex}
 
 \clearpage
 \section{Fachwissen}
-\input{chapter/Fachwissen.tex}
+\input{Meilenstein01/chapter/Fachwissen.tex}
 
 \clearpage
 \section{Domänenmodell}
-\input{chapter/Domain.tex}
+\input{Meilenstein01/chapter/Domain.tex}
 
 \clearpage
 \section{Spezifische Anforderungen}
@@ -107,7 +107,7 @@ Beschreibung des Systems und seiner Funktionen.
 
 
 \subsection{Akteure}
-\input{chapter/Akteure.tex}
+\input{Meilenstein01/chapter/Akteure.tex}
 
 \clearpage
 \subsection{Funktionale Anforderungen}
@@ -117,24 +117,24 @@ spezifizieren.
 
 \subsubsection{Sever}
 
-\input{chapter/serverFA.tex}
+\input{Meilenstein01/chapter/serverFA.tex}
 
 \clearpage
 \subsubsection{Client}
-\input{chapter/clientFA.tex}
+\input{Meilenstein01/chapter/clientFA.tex}
 
 \clearpage
 \subsubsection{KI-Client}
-\input{chapter/kiFA.tex}
+\input{Meilenstein01/chapter/kiFA.tex}
 \subsubsection{Editor}
-\input{chapter/editorFA.tex}
+\input{Meilenstein01/chapter/editorFA.tex}
 
 \clearpage
 \subsubsection{Allgemeine funktionale Anforderungen}
-\input{chapter/genFA.tex}
+\input{Meilenstein01/chapter/genFA.tex}
 
 \clearpage
 \subsection{Nichtfunktionale Anforderungen}
-\input{chapter/nfa.tex}
+\input{Meilenstein01/chapter/nfa.tex}
 
 \end{document}
