Inhaltsverzeichnis hinzugefügt und Schreibfehler in Überschrift korrigiert (Sever -> Server)

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -88,6 +88,8 @@
 
 \listoftodos
 
+\tableofcontents
+
 \clearpage
 \section{Kontextanalyse}
 \input{Meilenstein01/chapter/kontext.tex}
@@ -115,7 +117,7 @@ Beschreibung des Systems und seiner Funktionen.
 Dieser Abschnitt enthält alle Anforderungen, die die grundlegenden Aktionen des Softwaresystems
 spezifizieren.
 
-\subsubsection{Sever}
+\subsubsection{Server}
 
 \input{Meilenstein01/chapter/serverFA.tex}
 
