started work on initial sequence diagram

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -7,6 +7,8 @@
 \usepackage{graphicx}
 \usepackage{siunitx}
 \usepackage{placeins}
+\usepackage{tikz}
+\usepackage{tikz-uml}
 
 \setboolean{showsolutions}{false}
 
@@ -136,5 +138,9 @@ spezifizieren.
 \clearpage
 \subsection{Nichtfunktionale Anforderungen}
 \input{Meilenstein01/chapter/nfa.tex}
+
+\todo{Vielleicht die Diagramme thematisch und nicht nach Typ ordnen}
+\section{Sequenzdiagramme}
+\input{Meilenstein02/sequenz.tex}
 
 \end{document}
