Move connection(game start) diagram to separate file

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -141,6 +141,6 @@ spezifizieren.
 
 \todo{Vielleicht die Diagramme thematisch und nicht nach Typ ordnen}
 \section{Sequenzdiagramme}
-\input{Meilenstein02/sequenz.tex}
+\input{Meilenstein02/sequenz_verbindung.tex}
 
 \end{document}
