initial work on #11: Aktion Durchführen

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -142,5 +142,6 @@ spezifizieren.
 \todo{Vielleicht die Diagramme thematisch und nicht nach Typ ordnen}
 \section{Sequenzdiagramme}
 \input{Meilenstein02/sequenz_verbindung.tex}
+\input{Meilenstein02/sequenz_action.tex}
 
 \end{document}
