started working on #14

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -144,4 +144,6 @@ spezifizieren.
 \input{Meilenstein02/sequenz_verbindung.tex}
 \input{Meilenstein02/sequenz_action.tex}
 
+\input{Meilenstein02/state_userClient.tex}
+
 \end{document}
