changes to subsection layout

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -139,11 +139,18 @@ spezifizieren.
 \subsection{Nichtfunktionale Anforderungen}
 \input{Meilenstein01/chapter/nfa.tex}
 
+\clearpage
 \todo{Vielleicht die Diagramme thematisch und nicht nach Typ ordnen}
-\section{Sequenzdiagramme}
+\section{Abläufe im System}
+\subsection{Verbindungsaufbau zum Server}
 \input{Meilenstein02/sequenz_verbindung.tex}
+
+\clearpage
+\subsection{Durchführen einer Aktion}
 \input{Meilenstein02/sequenz_action.tex}
 
+\clearpage
+\subsection{Zustände des Clients}
 \input{Meilenstein02/state_userClient.tex}
 
 \end{document}
