Leere Datei für erstes Anwendungsfalldiagramm in der Datei Pflichtenheft.tex eingefügt.

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -141,6 +141,11 @@ spezifizieren.
 
 \clearpage
 \todo{Vielleicht die Diagramme thematisch und nicht nach Typ ordnen}
+\section{Anwendungsfälle des Systems}
+\subsection{Verbindungsverwaltung zwischen Client und Server}
+\input{Meilenstein02/use_case_network.tex}
+
+
 \section{Abläufe im System}
 \subsection{Verbindungsaufbau zum Server}
 \input{Meilenstein02/sequenz_verbindung.tex}
