Erstes Anwendungsfalldiagramm eingefügt.

--- a/Meilenstein02/use_case_network.tex
+++ b/Meilenstein02/use_case_network.tex
@@ -1,4 +1,4 @@
-Verbindung initiiern
+Verbindung initiieren
 
 FA-C \ref{c-session} %FA-C 33 Websocket Verbindung
 FA-KI \ref{ki-session} %FA-KI 39 Websocket Verbindung
@@ -30,3 +30,9 @@ Registrieren des Client-Typs
 
 FA-C \ref{c-join-human} %FA-C 24 Registrieren als menschlicher Spieler
 FA-KI \ref{ki-register} %FA-KI 40 Registrieren als KI
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\textwidth]{Meilenstein02/use_case_network.pdf}
+  \caption{Anwendungsfälle Netzwerkverbindungsmanagement}
+\end{figure}
