added file for state game

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -154,6 +154,10 @@ spezifizieren.
 \subsection{Durchführen einer Aktion}
 \input{Meilenstein02/sequenz_action.tex}
 
+\subsection{Zustände im Spiel}
+\input{Meilenstein02/state_game.tex}
+\clearpage
+
 \clearpage
 \subsection{Zustände des Clients}
 \input{Meilenstein02/state_userClient.tex}
