fixed two connections on #14

--- a/Meilenstein02/state_userClient.tex
+++ b/Meilenstein02/state_userClient.tex
@@ -36,8 +36,8 @@
 	
 	\umlHVtrans[arg={Client schließen/}, pos=0.7, align=right, anchor1=30]{menu}{final}
 	
-	\umltrans[arg={Lobbyübersicht aufrufen/}, pos=0.7, align=right, anchor1=-100, anchor2=158]{menu}{lobbyView}
-	\umltrans[arg={Zurück zum Menü/}, pos=0.3, align=left, anchor1=23, anchor2=-81]{lobbyView}{menu}
+	\umltrans[arg={Lobbyübersicht aufrufen/}, pos=0.7, align=right, anchor1=-127, anchor2=158]{menuConnected}{lobbyView}
+	\umltrans[arg={Zurück zum Menü/}, pos=0.3, align=left, anchor1=23, anchor2=-56]{lobbyView}{menuConnected}
 	
 	\umltrans[arg={verlasse Lobby/}, pos=0.4, align=left, anchor1=90, anchor2=-90]{lobby}{lobbyView}
 	
