fixes #17, Zustandsdiagramm KI

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -162,4 +162,8 @@ spezifizieren.
 \subsection{Zustände des Clients}
 \input{Meilenstein02/state_userClient.tex}
 
+\subsection{Zustände des KI-Clients}
+\input{Meilenstein02/state_ki.tex}
+
+
 \end{document}
