initial server diagram (#16)

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -165,5 +165,7 @@ spezifizieren.
 \subsection{Zustände des KI-Clients}
 \input{Meilenstein02/state_ki.tex}
 
+\subsection{Zustände des Servers}
+\input{Meilenstein02/state_server.tex}
 
 \end{document}
