--- a/Meilenstein02/state_game.tex
+++ b/Meilenstein02/state_game.tex
@@ -1,1 +1,28 @@
-Hier kommt das Spiel Zustandsdiagramm hin
+In diesem Zustandsdiagramm werden abstrakt die Zustände beschrieben, welche während eines Spiels auftreten können.
+
+\begin{tikzpicture}
+	\umlstateinitial[name=initial, x=0, y=0]
+	\umlstatefinal[name=final,x=8,y=-11]
+	\begin{umlstate}[x=4, y=-7, name=turnp1]{Spieler 1 ist am Zug}
+	\end{umlstate}
+
+	\begin{umlstate}[x=12,y=-7,name=turnp2]{Spieler 2 ist am Zug}
+	\end{umlstate}
+
+	\begin{umlstate}[x=8,y=-3,name=apbp]{Bestimmen der AP/BP}
+		\umlstatetext{Do/Bestimmen der AP und BP \\Abhängig von den \\gewählten Charaktere}
+	\end{umlstate}
+	
+	\umlHVtrans[anchor2=130]{initial}{turnp1}
+	\umltrans[arg={Zug beenden},pos=0.5,anchor1=10,anchor2=170]{turnp1}{turnp2}
+	\umltrans[arg={Zug beenden},pos=0.5,anchor1=-170,anchor2=-10]{turnp2}{turnp1}
+
+	\umltrans[]{turnp1}{apbp}
+	\umltrans[]{turnp2}{apbp}
+	\umlHVtrans[arg={Lable1},anchor1=175,anchor2=90]{apbp}{turnp1}
+	\umlHVtrans[arg={Label}]{apbp}{turnp2}
+	\umltrans[arg={Siegbedingung eingetreten},pos=0.5]{turnp1}{final}
+	\umltrans[arg={Siegbedingung eingetreten},pos=0.5]{turnp2}{final}
+	
+	\umltrans[arg=Bewegen, recursive=160|180|3.5cm, pos=1.5, recursive direction=left to left]{turnp1}{turnp1}
+\end{tikzpicture}
