#15 added draw and selection

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -165,6 +165,8 @@ spezifizieren.
 \subsection{Zustände im Spiel}
 \input{Meilenstein02/state_game.tex}
 \clearpage
+\input{Meilenstein02/sequenz_draw.tex}
+\clearpage
 
 \clearpage
 \subsection{Zustände des Clients}
