--- a/Meilenstein02/state_server.tex
+++ b/Meilenstein02/state_server.tex
@@ -1,7 +1,7 @@
 \begin{tikzpicture} 
     \umlstateinitial[y=4, name=initial]
-    \umlstateenter[name=connect, x=-4, y=4]
-    \umlstateend[name=end, x=-4, y=-6]
+    \umlstateenter[name=connect, x=-6, y=4]
+    \umlstateend[name=end, x=-6, y=-6]
     \begin{umlstate}{running}
         \begin{umlstate}[y=0, name=lobby]{Lobby}
         \end{umlstate}
@@ -11,6 +11,7 @@
 
     \umltrans{initial}{running}
     \umlVHtrans[arg={Verbinde Client}, pos=1.5]{connect}{lobby}
-    \umltrans[arg={Spielstart[$\geq 2$ Spieler]}, pos=0.5]{lobby}{game}
-    \umlHVtrans[arg={Spielende}, pos=0.5]{game}{end}
+    \umlHVHtrans[arg={Spielstart[$\geq 2$ Spieler]}, arm1=2, pos=1.5]{lobby}{game}
+    \umlHVtrans[arg={Spielende[Gewonnen]/NotifyClients}, pos=1.8]{game}{end}
+    \umlVHtrans[arg={Spielende[Timeout]/NotifyClients}, pos=1.5]{game}{end}
 \end{tikzpicture}
