#21 added M3 to main

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -177,5 +177,27 @@ spezifizieren.
 
 \subsection{Zustände des Servers}
 \input{Meilenstein02/state_server.tex}
+\clearpage
+
+\section{Schnittstellenarten und Dialogstruktur}
+\subsection{Schnittstellenbeschreibung des Clients}
+\input{Meilenstein03/schnittstelle_client.tex}
+\clearpage
+
+\subsection{Schnittstellenbeschreibung des Servers}
+\input{Meilenstein03/schnittstelle_server.tex}
+\clearpage
+
+\subsection{Schnittstellenbeschreibung des Editors}
+\input{Meilenstein03/schnittstelle_editor.tex}
+\clearpage
+
+\subsection{Schnittstellenbeschreibung des KI-Clients}
+\input{Meilenstein03/schnittstelle_ki.tex}
+\clearpage
+
+\section{Graphische Gestaltung und Nutzungskonzept}
+\input{Meilenstein03/nutzungskonzept.tex}
+\clearpage
 
 \end{document}
