#8 Anwendungsfalldiagramm in Pflichtenheft.tex-Datei eingefügt und Liste erweitert

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -144,6 +144,9 @@ spezifizieren.
 \subsection{Verbindungsverwaltung zwischen Client und Server}
 \input{Meilenstein02/use_case_network.tex}
 
+\subsection{Verwaltung der Spielpartien bei Client und Server}
+\input{Meilenstein02/use_case_lobbymanagement.tex}
+
 
 \section{Abläufe im System}
 \subsection{Verbindungsaufbau zum Server}
