--- a/Meilenstein02/use_case_lobbymanagement.tex
+++ b/Meilenstein02/use_case_lobbymanagement.tex
@@ -28,15 +28,15 @@ Lobby erstellen
 
 Konfigurationsdateien festlegen
 
-FA-S \ref{c-partieconfig} %FA-S 1 Partie Konfiguration
-FA-S \ref{c-szenarioconfig} %FA-S 2 Szenario Konfiguration
-FA-S \ref{c-charakterconfig} %FA-S 3 Charakter Konfiguration
+FA-S \ref{s-partieconfig} %FA-S 1 Partie Konfiguration
+FA-S \ref{s-szenarioconfig} %FA-S 2 Szenario Konfiguration
+FA-S \ref{s-charakterconfig} %FA-S 3 Charakter Konfiguration
 
 Lobby beitreten
 
 FA-C \ref{c-join} %FA-C 23 Beitreten als Mitspieler
 FA-C \ref{c-join-spectator} %FA-C 24 Beitreten als Zuschauer
-FA-S \ref{c-zuschauer} %FA-S 5 Zuschauer
+FA-S \ref{s-zuschauer} %FA-S 5 Zuschauer
 
 Lobby anzeigen
 
@@ -48,10 +48,10 @@ Rolle wechseln
 
 FA-C \ref{c-join} %FA-C 23 Beitreten als Mitspieler
 FA-C \ref{c-join-spectator} %FA-C 24 Beitreten als Zuschauer
-FA-S \ref{c-zuschauer} %FA-S 5 Zuschauer
+FA-S \ref{s-zuschauer} %FA-S 5 Zuschauer
 
 Spiel starten
-FA-S \ref{c-partieinit} %FA-S 8 Spiel Start und Initialisierung
+FA-S \ref{s-partieinit} %FA-S 8 Spiel Start und Initialisierung
 
 
 \begin{figure}
