#8 Diagramme dem Pflichtenheft hinzugefügt.

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -147,6 +147,11 @@ spezifizieren.
 \subsection{Verwaltung der Spielpartien bei Client und Server}
 \input{Meilenstein02/use_case_lobbymanagement.tex}
 
+\subsection{Anwendungsfälle innerhalb einer Spielpartie}
+\input{Meilenstein02/use_case_gamesession.tex}
+
+\subsection{Editor}
+\input{Meilenstein02/use_case_editor.tex}
 
 \section{Abläufe im System}
 \subsection{Verbindungsaufbau zum Server}
