#8 Beschreibungen für den Editor und das Lobbymanagement hinzugefügt

--- a/Meilenstein02/use_case_editor.tex
+++ b/Meilenstein02/use_case_editor.tex
@@ -1,3 +1,5 @@
+Die drei Anwendungsfälle 'Charakterkonfiguration erstellen und editieren', Szenario-Konfiguration erstellen und editieren' und 'Partie-Konfiguration erstellen und editieren' beinhalten den Anwendungsfall 'GUI anzeigen', da es notwendig ist dem Benutzer die zu editierenden Daten graphisch anzuzeigen. Die drei erstellten Konfigurationsdateien müssen dann in das JSON-Format codiert werden. Dies wird durch den Anwendungsfall 'JSON-Datei bearbeiten' erweitert.
+
 JSON-Datei speichern
 
 FA-E \ref{e-json-encodeing} %FA-E 47 JSON Encoding
