--- a/Meilenstein02/use_case_lobbymanagement.tex
+++ b/Meilenstein02/use_case_lobbymanagement.tex
@@ -1,3 +1,5 @@
+Damit ein Benutzer ein Spiel starten kann, muss er sich über das Hauptmenü verfügbare Lobbys anzeigen lassen. Dann kann er entweder einer bestehenden Lobby beitreten oder eine neue Lobby erstellen. Das Erstellen einer neuen Lobby beinhaltet das Auswählen der Konfigurationsdateien. Ist der Benutzer nun Mitglied einer Lobby, wird er vom Server einer der Rollen Spieler1, Spieler2 oder Zuschauer zugeteilt. Diese Rolle kann der Benutzer im Lobby-View wechseln. Befinden sich zwei Spieler in einer Lobby, startet der Server das Spiel. Eine Lobby kann verlassen werden, dann kehrt der Benutzer in die Lobby-Übersicht zurück. Verlässt er diese ebenfalls, gelangt er in das Hauptmenü. Über das Hauptmenü kann die gesamte Anwendung beendet werden.
+
 Hauptmenü anzeigen
 
 FA-C \ref{c-menu} %FA-C 21 Hauptmenü
