--- a/Meilenstein02/use_case_editor.tex
+++ b/Meilenstein02/use_case_editor.tex
@@ -1,12 +1,10 @@
-Die drei Anwendungsfälle 'Charakterkonfiguration erstellen und editieren', Szenario-Konfiguration erstellen und editieren' und 'Partie-Konfiguration erstellen und editieren' beinhalten den Anwendungsfall 'GUI anzeigen', da es notwendig ist dem Benutzer die zu editierenden Daten graphisch anzuzeigen. Die drei erstellten Konfigurationsdateien müssen dann in das JSON-Format codiert werden. Dies wird durch den Anwendungsfall 'JSON-Datei bearbeiten' erweitert.
-
 JSON-Datei speichern
 
-FA-E \ref{e-json-encodeing} %FA-E 47 JSON Encoding
+FA-E \ref{e-json-encoding} %FA-E 47 JSON Encoding
 
 JSON-Datei bearbeiten
 
-FA-E \ref{e-json-decodeing} %FA-E 48 JSON Decoding
+FA-E \ref{e-json-decoding} %FA-E 48 JSON Decoding
 
 GUI anzeigen
 
