--- a/Meilenstein02/state_game.tex
+++ b/Meilenstein02/state_game.tex
@@ -3,39 +3,44 @@ In diesem Zustandsdiagramm werden abstrakt die Zustände beschrieben, welche wä
 
 \begin{tikzpicture}
 	\umlstateinitial[name=initial, x=0, y=0]
-	\umlstatefinal[name=final,x=8,y=-14]
-	\begin{umlstate}[x=4, y=-10, name=turnp1]{Spieler 1 ist am Zug}
+	\umlstatefinal[name=final,x=8,y=-16]
+	\begin{umlstate}[x=4, y=-12, name=turnp1]{Spieler 1 ist am Zug}
 	\end{umlstate}
 
-	\begin{umlstate}[x=12,y=-10,name=turnp2]{Spieler 2 ist am Zug}
+	\begin{umlstate}[x=12,y=-12,name=turnp2]{Spieler 2 ist am Zug}
 	\end{umlstate}
 
-	\begin{umlstate}[x=8,y=-6,name=apbp]{Bestimmen der AP/BP}
-		\umlstatetext{Do/Bestimmen der AP und BP \\Abhängig von den \\gewählten Charaktere}
+	\begin{umlstate}[x=8,y=-8,name=apbp]{Bestimmen der AP/BP}
+		\umlstatetext{Do/Bestimmen der AP und BP \\Abhängig vom \\gewählten Charakter}
 	\end{umlstate}
+	
+	\begin{umlstate}[x=8,y=-2,name=char]{Charakter wählen}
+	\end{umlstate}
+	
 
-	\node[singlestate] at (3.5,-16)(charAction){Charakter gewählt};
-	\node[singlestate] at (12.5,-16)(charAction2){Charakter gewählt};
+	\node[singlestate] at (12.5, -4) (server){Server macht Zug};
+	\umlHVtrans[anchor2=90]{initial}{char}
+	\umltrans[arg={Charakter am Zug},anchor1=270,pos=0.5,align=right]{char}{apbp}
 
-	\umlHVtrans[anchor2=90]{initial}{apbp}
+	%\umlHVtrans[arg=Zug beendet,align=right,pos=1.5,anchor1=0,anchor2=260]{turnp1}{apbp}
+	%\umlHVtrans[arg=Zug beendet,align=left,pos=1.5,anchor1=180,anchor2=280]{turnp2}{apbp}
 
-	\umlHVtrans[arg=Zug beendet,align=right,pos=1.5,anchor1=0,anchor2=260]{turnp1}{apbp}
-	\umlHVtrans[arg=Zug beendet,align=left,pos=1.5,anchor1=180,anchor2=280]{turnp2}{apbp}
+	\umlHVtrans[arg={Char. Fraktion 1},anchor1=175,anchor2=110,pos=0.05,align=right]{apbp}{turnp1}
+	\umlHVtrans[arg={Char. Fraktion 2},anchor2=65,pos=0.8]{apbp}{turnp2}
 
-	\umlHVtrans[arg={Nächster Spieler},anchor1=175,anchor2=130,pos=0.05,align=right]{apbp}{turnp1}
-	\umlHVtrans[arg={Nächster Spieler},anchor2=65,pos=0.8]{apbp}{turnp2}
-
-	\umlHVtrans[arg={Siegbedingung},pos=1.5,align=right,anchor1=-20,anchor2=135]{turnp1}{final}
-	\umlHVtrans[arg={Siegbedingung},pos=1.5,anchor1=200,anchor2=45,align=left]{turnp2}{final}
+	\umlHVtrans[arg={Spiel beendet},pos=1.5,align=right,anchor1=-20,anchor2=100]{turnp1}{final}
+	\umlHVtrans[arg={Spiel beendet},pos=1.5,anchor1=200,anchor2=80,align=left]{turnp2}{final}
 	
 	\umltrans[arg={Überlanges Spiel  }, recursive=170|190|1.5cm, pos=2.1,align=right, recursive direction=left to left]{turnp1}{turnp1}
 	\umltrans[arg=Überlanges Spiel, recursive=10|-10|1.5cm, pos=1.5, recursive direction=left to left]{turnp2}{turnp2}
+	
 
+	\umlHVHtrans[arg={Zug beendet}, pos=2.5, align=left, arm1=-2.5cm,anchor1=155, anchor2=180]{turnp1}{char}
+	\umlHVHtrans[arg={Zug beendet}, pos=2.5, align=left, arm1=2.5cm,anchor1=25, anchor2=0]{turnp2}{char}
 
-	\umlHVtrans[arg=Charakter ausgewählt,anchor1=248,anchor2=100,align=right,pos=1.5]{turnp1}{charAction}
-	\umlHVtrans[arg=Aktion/Bewegung,pos=1.5,align=left]{charAction}{turnp1}
+	\umlHVtrans[arg={NPC},anchor1=30,anchor2=270,pos=1.5,align=left]{apbp}{server}
+	\umlHVtrans[align=left,anchor1=180,anchor2=300]{server}{char}
 
-	\umlHVtrans[arg=Charakter ausgewählt,anchor1=298,anchor2=80 ,align=left,pos=1.5]{turnp2}{charAction2}
-	\umlHVtrans[arg=Aktion/Bewegung,align=right,pos=1.5]{charAction2}{turnp2}
-
+	\umltrans[arg={Aktion/Bewegung}, recursive=255|285|2.5cm, pos=1.0,align=right, recursive direction=bottom to bottom]{turnp1}{turnp1}
+	\umltrans[arg={Aktion/Bewegung}, recursive=285|255|2.5cm, pos=1.0,align=left, recursive direction=bottom to bottom]{turnp2}{turnp2}
 \end{tikzpicture}
