added page break in table of contents

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -140,6 +140,7 @@ spezifizieren.
 
 \clearpage
 \todo{Vielleicht die Diagramme thematisch und nicht nach Typ ordnen}
+\addtocontents{toc}{\protect\newpage}
 \section{Anwendungsfälle des Systems}
 \subsection{Verbindungsverwaltung zwischen Client und Server}
 \input{Meilenstein02/use_case_network.tex}
